package org.vulcan.light.designpattern.creational.builder.definition;

/**
 * @author Sam Lu
 * @date 2021/4/29
 */
public class Product {

    private String part;

    public String getPart() {
        return part;
    }

    public void setPart(String part) {
        this.part = part;
    }

}
